Rename authentication token to access token.
